--- a/public/index.html
+++ b/public/index.html
@@ -9,4 +9,9 @@
   <body>
     <div id="root"></div>
   </body>
+  <script>
+    document.querySelector('.asideBtn').addEventListener('click', () => {
+      document.querySelector('#aside').style.left = '0'
+    })
+  </script>
 </html>
